[package]
name = "fastterm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "fastterm-runner"
path = "src/main.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.2"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
memmap2 = "0.5.10"
byte-unit = {version = "4.0.18", default-featulres = false}
ringbuf = "0.3.2"
uninit = "0.5.1"
